# pythonFeedbackApi

./: .coveragerc  Makefile  pyproject.toml
scripts/: pytest.sh  serve_api.sh
spec/: api_spec.py  course_services_spec.py  course_store_spec.py  feedback_services_spec.py  feedback_store_spec.py
src/: abc.py  main.py  models.py  services.py  stores.py
test/: test_services.py  test_stores.py
